--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,33 @@
 {
   "name": "MSYazılımDuo - Yazılım Stüdyosu",
   "short_name": "MSYazılımDuo",
-  "description": "Profesyonel web ve yazılım geliştirme hizmetleri",
+  "description": "Bursa merkezli profesyonel web ve yazılım geliştirme hizmetleri",
   "start_url": "/",
   "display": "standalone",
+  "scope": "/",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/og-image.png",
+      "sizes": "1200x630",
+      "type": "image/png",
+      "form_factor": "wide"
     }
   ]
 }
