--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,9 +22,9 @@
       "purpose": "any"
     },
     {
-      "src": "/favicon-96x96.png",
+      "src": "/favicon-96x96.svg",
       "sizes": "96x96",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
