--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,6 +22,12 @@
       "purpose": "any"
     },
     {
+      "src": "/favicon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
       "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
